[gd_scene format=3 uid="uid://duanluupxtsxr"]

[ext_resource type="Script" uid="uid://c6r352ryhedq0" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://dlfaixc2yvp8w" path="res://assets/sprites/OBJ_PlayerIdleR.png" id="2_qhqgy"]
[ext_resource type="Texture2D" uid="uid://cu81ffijgjyou" path="res://assets/sprites/OBJ_PlayerRun.png" id="3_dqkch"]
[ext_resource type="Texture2D" uid="uid://dctapckprncna" path="res://assets/sprites/OBJ_PlayerActionR.PNG" id="4_dqkch"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jej6c"]
atlas = ExtResource("2_qhqgy")
region = Rect2(3, 0, 29, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1ej7"]
atlas = ExtResource("2_qhqgy")
region = Rect2(32, 0, 29, 52)

[sub_resource type="AtlasTexture" id="AtlasTexture_3v2ag"]
atlas = ExtResource("3_dqkch")
region = Rect2(43, 0, 33, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqkch"]
atlas = ExtResource("3_dqkch")
region = Rect2(7, 0, 36, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlg0r"]
atlas = ExtResource("3_dqkch")
region = Rect2(43, 0, 36, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_tuyoq"]
atlas = ExtResource("3_dqkch")
region = Rect2(79, 0, 36, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_fjrip"]
atlas = ExtResource("3_dqkch")
region = Rect2(112, 0, 33, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_smehm"]
atlas = ExtResource("3_dqkch")
region = Rect2(145, 0, 33, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_ur7pv"]
atlas = ExtResource("3_dqkch")
region = Rect2(181, 0, 33, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_y4r1p"]
atlas = ExtResource("3_dqkch")
region = Rect2(214, 0, 33, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2wvv"]
atlas = ExtResource("3_dqkch")
region = Rect2(247, 0, 33, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_oprun"]
atlas = ExtResource("4_dqkch")
region = Rect2(256, 98, 35, 49)

[sub_resource type="SpriteFrames" id="SpriteFrames_qlg0r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jej6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1ej7")
}],
"loop": true,
"name": &"idle",
"speed": 2.5
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3v2ag")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqkch")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlg0r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tuyoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fjrip")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smehm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ur7pv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y4r1p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2wvv")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oprun")
}],
"loop": true,
"name": &"sword",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qhqgy"]
size = Vector2(9, 39.75)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_g2els"]
size = Vector2(10, 8)

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
script = ExtResource("1_g2els")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -22)
sprite_frames = SubResource("SpriteFrames_qlg0r")
animation = &"sword"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -22)
shape = SubResource("RectangleShape2D_qhqgy")

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.2

[node name="SwordBuffer" type="Timer" parent="."]
wait_time = 0.5

[node name="InvincibilityTimer" type="Timer" parent="."]

[node name="SwordCooldown" type="Timer" parent="."]

[node name="BombCooldown" type="Timer" parent="."]
wait_time = 1.5

[node name="SwordSwingLeft" type="Area2D" parent="."]
position = Vector2(-15, -14)
scale = Vector2(1, 3.40439)
collision_layer = 2

[node name="Collider" type="CollisionShape2D" parent="SwordSwingLeft"]
position = Vector2(-8, -2.64364)
rotation = 1.5708
scale = Vector2(0.663733, 5.63583)
shape = SubResource("RectangleShape2D_g2els")
disabled = true

[node name="SwordSwingRight" type="Area2D" parent="."]
position = Vector2(15, -14)
scale = Vector2(1, 3.40439)
collision_layer = 0
collision_mask = 3

[node name="Collider" type="CollisionShape2D" parent="SwordSwingRight"]
position = Vector2(8, -2.64364)
rotation = 1.5708
scale = Vector2(0.663733, 5.63583)
shape = SubResource("RectangleShape2D_g2els")
disabled = true

[connection signal="timeout" from="JumpBuffer" to="." method="_on_jump_buffer_timeout"]
[connection signal="timeout" from="SwordBuffer" to="." method="_on_sword_buffer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_invincibility_timer_timeout"]
[connection signal="timeout" from="SwordCooldown" to="." method="_on_sword_cooldown_timeout"]
[connection signal="timeout" from="BombCooldown" to="." method="_on_bomb_cooldown_timeout"]
[connection signal="body_entered" from="SwordSwingLeft" to="." method="_on_sword_swing_left_body_entered"]
[connection signal="body_entered" from="SwordSwingRight" to="." method="_on_sword_swing_right_body_entered"]
